--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "moment-timezone": "^0.5.27",
     "node-fetch": "^2.6.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^24.9.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "start": "node ./src/index.js tax-compliance-migration-webservice https://graphql.buildkite.com/v1 $BUILDKITE_API_KEY "
   },
   "keywords": [],
